Implement huffman writer

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
+authors = ["David Barnett <david@barnett.net.nz>"]
 name = "huff"
 version = "0.1.0"
-authors = ["David Barnett <david@barnett.net.nz>"]
-
 [dependencies]
+bitstream-rs = "0.2.0"
